fake news articles

--- a/gk.bib
+++ b/gk.bib
@@ -25971,3 +25971,448 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {1263},
   year =         {2016}
 }
+
+
+@article{BakMesAda15,
+  title={Exposure to ideologically diverse news and opinion on Facebook},
+  author={Bakshy, Eytan and Messing, Solomon and Adamic, Lada A},
+  journal={Science},
+  volume={348},
+  number={6239},
+  pages={1130--1132},
+  year={2015},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{Balmas14,
+  title={When fake news becomes real: Combined exposure to multiple news sources and political attitudes of inefficacy, alienation, and cynicism},
+  author={Balmas, Meital},
+  journal={Communication Research},
+  volume={41},
+  number={3},
+  pages={430--454},
+  year={2014},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@misc{BarMitHol16,
+  title={Many Americans believe fake news is sowing confusion},
+  author={Barthel, Michael and Mitchell, Amy and Holcomb, Jesse},
+  year={2016},
+  url = {http://www.journalism.org/2016/12/15/many-americans-believe-fake-news-is-sowing-confusion/}
+}
+
+@article{Berghel17,
+  title={Lies, damn lies, and fake news},
+  author={Berghel, Hal},
+  journal={Computer},
+  volume={50},
+  number={2},
+  pages={80--85},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{Berinsky15,
+  title={Rumors and health care reform: experiments in political misinformation},
+  author={Berinsky, Adam J},
+  journal={British Journal of Political Science},
+  volume={47},
+  number={2},
+  pages={241--262},
+  year={2017},
+  publisher={Cambridge University Press}
+}
+
+@article{BerSch16,
+  title={Miley, CNN and The Onion: When fake news becomes realer than real},
+  author={Berkowitz, Dan and Schwartz, David Asa},
+  journal={Journalism Practice},
+  volume={10},
+  number={1},
+  pages={1--17},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
+@article{BesColDav15,
+  title={Science vs conspiracy: Collective narratives in the age of misinformation},
+  author={Bessi, Alessandro and Coletto, Mauro and Davidescu, George Alexandru and Scala, Antonio and Caldarelli, Guido and Quattrociocchi, Walter},
+  journal={PloS one},
+  volume={10},
+  number={2},
+  pages={e0118093},
+  year={2015},
+  publisher={Public Library of Science}
+}
+
+@article{BesFer16,
+	author = {Alessandro Bessi and Emilio Ferrara},
+	title = {Social bots distort the 2016 U.S. Presidential election online discussion},
+	journal = {First Monday},
+	volume = {21},
+	number = {11},
+	year = {2016},
+	keywords = {},
+	issn = {13960466},	doi = {10.5210/fm.v21i11.7090},
+	url = {http://firstmonday.org/ojs/index.php/fm/article/view/7090}
+}
+
+@article{BreGolMor13,
+  title={The impact of real news about “fake news”: Intertextual processes and political satire},
+  author={Brewer, Paul R and Young, Dannagal Goldthwaite and Morreale, Michelle},
+  journal={International Journal of Public Opinion Research},
+  volume={25},
+  number={3},
+  pages={323--343},
+  year={2013},
+  publisher={Oxford University Press}
+}
+
+@article{ChaJonJam17,
+  title={Debunking: a meta-analysis of the psychological efficacy of messages countering misinformation},
+  author={Chan, Man-pui Sally and Jones, Christopher R and Hall Jamieson, Kathleen and Albarrac{\'\i}n, Dolores},
+  journal={Psychological science},
+  volume={28},
+  number={11},
+  pages={1531--1546},
+  year={2017},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{ConRubChe15,
+  title={Automatic deception detection: Methods for finding fake news},
+  author={Conroy, Niall J and Rubin, Victoria L and Chen, Yimin},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={52},
+  number={1},
+  pages={1--4},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@misc{DesHowBra17,
+  title={Junk News and Bots during the French Presidential Election: What Are French Voters Sharing Over Twitter In Round Two?},
+  author={Howard, Philip N and Bradshaw, Samantha and Kollanyi, Bence and Bolsolver, Gillian},
+  year={2017},
+url = {https://www.oii.ox.ac.uk/blog/junk-news-and-bots-during-the-french-presidential-election-round-i/}
+}
+
+@book{DifBor2007,
+  title={Rumor psychology: Social and organizational approaches},
+  author={DiFonzo, Nicholas and Bordia, Prashant},
+  volume={1},
+  year={2007},
+  publisher={American Psychological Association Washington, DC}
+}
+
+@article{Ferrara15,
+  author    = {Emilio Ferrara},
+  title     = {Manipulation and abuse on social media},
+  journal   = {CoRR},
+  volume    = {abs/1503.03752},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1503.03752},
+  archivePrefix = {arXiv},
+  eprint    = {1503.03752},
+  timestamp = {Wed, 07 Jun 2017 14:41:08 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/Ferrara15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Ferrara17,
+	author = {Emilio Ferrara},
+	title = {Disinformation and social bot operations in the run up to the 2017 French presidential election},
+	journal = {First Monday},
+	volume = {22},
+	number = {8},
+	year = {2017},
+	keywords = {},
+	issn = {13960466},	doi = {10.5210/fm.v22i8.8005},
+	url = {http://firstmonday.org/ojs/index.php/fm/article/view/8005}
+}
+
+@article{GreOpp17,
+  title={Rumor has it: The adoption of unverified information in conflict zones},
+  author={Greenhill, Kelly M and Oppenheim, Ben},
+  journal={International Studies Quarterly},
+  volume={61},
+  number={3},
+  pages={660--676},
+  year={2017},
+  publisher={Oxford University Press}
+}
+
+@inproceedings{GupLamKum13,
+  title={Faking sandy: characterizing and identifying fake images on twitter during hurricane sandy},
+  author={Gupta, Aditi and Lamba, Hemank and Kumaraguru, Ponnurangam and Joshi, Anupam},
+  booktitle={Proceedings of the 22nd international conference on World Wide Web},
+  pages={729--736},
+  year={2013},
+  organization={ACM}
+}
+
+@article{LazBauBen18,
+  title={The science of fake news},
+  author={Lazer, David MJ and Baum, Matthew A and Benkler, Yochai and Berinsky, Adam J and Greenhill, Kelly M and Menczer, Filippo and Metzger, Miriam J and Nyhan, Brendan and Pennycook, Gordon and Rothschild, David and others},
+  journal={Science},
+  volume={359},
+  number={6380},
+  pages={1094--1096},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
+}
+
+@misc{LazBauGri17,
+  title={Combating fake news: An agenda for research and action},
+  author={Mele, Nicco and Lazer, David and Baum, Matthew and Grinberg, Nir and Friedland, Lisa and Joseph, Kenneth and Hobbs, Will and Mattsson, Carolina},
+  year={2017},
+url = {https://shorensteincenter.org/combating-fake-news-agenda-for-research/}
+}
+
+@article{LewGigObe13,
+  title={The role of conspiracist ideation and worldviews in predicting rejection of science},
+  author={Lewandowsky, Stephan and Gignac, Gilles E and Oberauer, Klaus},
+  journal={PloS one},
+  volume={8},
+  number={10},
+  pages={e75637},
+  year={2013},
+  publisher={Public Library of Science}
+}
+
+@article{Marchi12,
+  title={With Facebook, blogs, and fake news, teens reject journalistic “objectivity”},
+  author={Marchi, Regina},
+  journal={Journal of Communication Inquiry},
+  volume={36},
+  number={3},
+  pages={246--262},
+  year={2012},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{MarLew17,
+  title={Media manipulation and disinformation online},
+  author={Marwick, Alice and Lewis, Rebecca},
+  journal={New York: Data \& Society Research Institute},
+  year={2017}
+}
+
+@article{NyhReiUbe13,
+  title={The hazards of correcting myths about health care reform},
+  author={Nyhan, Brendan and Reifler, Jason and Ubel, Peter A},
+  journal={Medical care},
+  volume={51},
+  number={2},
+  pages={127--132},
+  year={2013},
+  publisher={LWW}
+}
+
+@article{OliWoo14,
+  title={Conspiracy theories and the paranoid style (s) of mass opinion},
+  author={Oliver, J Eric and Wood, Thomas J},
+  journal={American Journal of Political Science},
+  volume={58},
+  number={4},
+  pages={952--966},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{PenCanRan17,
+  title={Prior exposure increases perceived accuracy of fake news},
+  author={Pennycook, Gordon and Cannon, Tyrone and Rand, David G},
+  year={2018},
+journal = {forthcoming in Journal of Experimental Psychology},
+url = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2958246}
+}
+
+@article{RayCheHag18,
+  title={Fake news judgement: The case of undergraduate students at Notre Dame University-Louaize, Lebanon},
+  author={El Rayess, Maroun and Chebl, Charla and Mhanna, Joseph and Hage, Re-Mi},
+  journal={Reference Services Review},
+  volume={46},
+  number={1},
+  pages={146--149},
+  year={2018},
+  publisher={Emerald Publishing Limited}
+}
+
+@article{RojMer16,
+  title={Rumors and factitious informational blends: The role of the web in speculative politics},
+  author={Rojecki, Andrew and Meraz, Sharon},
+  journal={New Media \& Society},
+  volume={18},
+  number={1},
+  pages={25--43},
+  year={2016},
+  publisher={Sage Publications Sage UK: London, England}
+}
+
+@article{RubCheCon15,
+  title={Deception detection for news: three types of fakes},
+  author={Rubin, Victoria L and Chen, Yimin and Conroy, Niall J},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={52},
+  number={1},
+  pages={1--4},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{ShaCiaFla16,
+  author    = {Chengcheng Shao and
+               Giovanni Luca Ciampaglia and
+               Alessandro Flammini and
+               Filippo Menczer},
+  title     = {Hoaxy: A Platform for Tracking Online Misinformation},
+  journal   = {CoRR},
+  volume    = {abs/1603.01511},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1603.01511},
+  archivePrefix = {arXiv},
+  eprint    = {1603.01511},
+  timestamp = {Wed, 07 Jun 2017 14:41:06 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/ShaoCFM16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@misc{SheGot17,
+  title={News Use Across Social Media Platforms 2017},
+  author={Shearer, Elisa and Gottfried, Jeffrey},
+  year={2017},
+  url = {http://www.journalism.org/2017/09/07/news-use-across-social-media-platforms-2017/#}
+}
+
+@misc{SilSin16,
+  title={Most Americans who see fake news believe it, new survey says},
+  author={Silverman, Craig and Singer-Vine, Jeremy},
+  year={2016},
+  url = {https://www.buzzfeed.com/craigsilverman/fake-news-survey}
+}
+
+@misc{Silverman15,
+  title={Lies, damn lies, and viral content. how news websites spread (and debunk) online rumors, unverified claims, and misinformation},
+  author={Silverman, Craig},
+  year={2015},
+  url = {https://towcenter.org/research/lies-damn-lies-and-viral-content/}
+}
+
+@misc{Silverman16,
+  title={This Analysis Shows How Viral Fake Election News StoriesOutperformed Real News On Facebook},
+  author={Silverman, Craig},
+  year={2016},
+  url = {https://www.buzzfeed.com/craigsilverman/viral-fake-election-news-outperformed-real-news-on-facebook?utm_term=.gdBe96aAW#.fx1L3Ax54}
+}
+
+@article{StaMadOra14,
+  title={Rumors, false flags, and digital vigilantes: Misinformation on twitter after the 2013 boston marathon bombing},
+  author={Starbird, Kate and Maddock, Jim and Orand, Mania and Achterman, Peg and Mason, Robert M},
+  journal={iConference 2014 Proceedings},
+  year={2014},
+  publisher={iSchools}
+}
+
+@article{SwiBerLew17,
+  title={Processing political misinformation: comprehending the Trump phenomenon},
+  author={Swire, Briony and Berinsky, Adam J and Lewandowsky, Stephan and Ecker, Ullrich KH},
+  journal={Royal Society open science},
+  volume={4},
+  number={3},
+  pages={160802},
+  year={2017},
+  publisher={The Royal Society}
+}
+
+@inproceedings{TamRufFla15,
+  title={Fact-checking effect on viral hoaxes: A model of misinformation spread in social networks},
+  author={Tambuscio, Marcella and Ruffo, Giancarlo and Flammini, Alessandro and Menczer, Filippo},
+  booktitle={Proceedings of the 24th International Conference on World Wide Web},
+  pages={977--982},
+  year={2015},
+  organization={ACM}
+}
+
+@article{UscKloAtk16,
+  title={What drives conspiratorial beliefs? The role of informational cues and predispositions},
+  author={Uscinski, Joseph E and Klofstad, Casey and Atkinson, Matthew D},
+  journal={Political Research Quarterly},
+  volume={69},
+  number={1},
+  pages={57--71},
+  year={2016},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{VarFerDav17,
+  author    = {Onur Varol and
+               Emilio Ferrara and
+               Clayton A. Davis and
+               Filippo Menczer and
+               Alessandro Flammini},
+  title     = {Online Human-Bot Interactions: Detection, Estimation, and Characterization},
+  journal   = {CoRR},
+  volume    = {abs/1703.03107},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1703.03107},
+  archivePrefix = {arXiv},
+  eprint    = {1703.03107},
+  timestamp = {Wed, 07 Jun 2017 14:41:59 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/VarolFDMF17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{VicBesZol16,
+  title={The spreading of misinformation online},
+  author={Del Vicario, Michela and Bessi, Alessandro and Zollo, Fabiana and Petroni, Fabio and Scala, Antonio and Caldarelli, Guido and Stanley, H Eugene and Quattrociocchi, Walter},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={113},
+  number={3},
+  pages={554--559},
+  year={2016},
+  publisher={National Acad Sciences}
+}
+
+@article{VosRoyAra18,
+  title={The spread of true and false news online},
+  author={Vosoughi, Soroush and Roy, Deb and Aral, Sinan},
+  journal={Science},
+  volume={359},
+  number={6380},
+  pages={1146--1151},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
+}
+
+@misc{WarHos17,
+  title={Information Disorder: Toward an interdisciplinary framework for research and policy making},
+  author={Wardle, Claire and Derakhshan, Hossein},
+  year={2017},
+  publisher={Report to the Council of Europe. https://shorensteincenter. org/information-disorder-framework-for-research-and-policymaking}
+}
+
+@article{Weeks15,
+  title={Emotions, partisanship, and misperceptions: How anger and anxiety moderate the effect of partisan bias on susceptibility to political misinformation},
+  author={Weeks, Brian E},
+  journal={Journal of Communication},
+  volume={65},
+  number={4},
+  pages={699--719},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
+@article{ZubLiaPro16,
+  title={Analysing how people orient to and spread rumours in social media by looking at conversational threads},
+  author={Zubiaga, Arkaitz and Liakata, Maria and Procter, Rob and Hoi, Geraldine Wong Sak and Tolmie, Peter},
+  journal={PloS one},
+  volume={11},
+  number={3},
+  pages={e0150989},
+  year={2016},
+  publisher={Public Library of Science}
+}
