--- a/gk.bib
+++ b/gk.bib
@@ -26416,3 +26416,22 @@ url = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2958246}
   year={2016},
   publisher={Public Library of Science}
 }
+
+@article{JagJohJak07,
+ author = {Jagatic, Tom N. and Johnson, Nathaniel A. and Jakobsson, Markus and Menczer, Filippo},
+ title = {Social Phishing},
+ journal = {Communications of the ACM},
+ issue_date = {October 2007},
+ volume = {50},
+ number = {10},
+ month = oct,
+ year = {2007},
+ issn = {0001-0782},
+ pages = {94--100},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/1290958.1290968},
+ doi = {10.1145/1290958.1290968},
+ acmid = {1290968},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
