--- a/gk.bib
+++ b/gk.bib
@@ -26435,3 +26435,15 @@ url = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2958246}
  publisher = {ACM},
  address = {New York, NY, USA},
 }
+
+@article{Nickerson98,
+Author = {Nickerson, Raymond S.},
+ISSN = {1089-2680},
+Journal = {Review of General Psychology},
+Number = {2},
+Pages = {175 - 220},
+Title = {Confirmation bias: A ubiquitous phenomenon in many guises.},
+Volume = {2},
+URL = {http://ezp-prod1.hul.harvard.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=pdh&AN=1998-02489-003&site=ehost-live&scope=site},
+Year = {1998},
+}
