--- a/gk.bib
+++ b/gk.bib
@@ -26447,3 +26447,13 @@ Volume = {2},
 URL = {http://ezp-prod1.hul.harvard.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=pdh&AN=1998-02489-003&site=ehost-live&scope=site},
 Year = {1998},
 }
+
+@article{SunBobLaz17,
+  title={How people update beliefs about climate change: Good news and bad news},
+  author={Sunstein, Cass R and Bobadilla-Suarez, Sebastian and Lazzaro, Stephanie C and Sharot, Tali},
+  journal={Cornell L. Rev.},
+  volume={102},
+  pages={1431},
+  year={2017},
+  publisher={HeinOnline}
+}
