--- a/gk.bib
+++ b/gk.bib
@@ -26457,3 +26457,14 @@ Year = {1998},
   year={2017},
   publisher={HeinOnline}
 }
+
+@article{FlyNyhRei17,
+  title={The nature and origins of misperceptions: Understanding false and unsupported beliefs about politics},
+  author={Flynn, DJ and Nyhan, Brendan and Reifler, Jason},
+  journal={Advances in Political Psychology},
+  volume={38},
+  number={1},
+  pages={127--150},
+  year={2017},
+  publisher={Wiley Online Library}
+}
