--- a/gk.bib
+++ b/gk.bib
@@ -26468,3 +26468,14 @@ Year = {1998},
   year={2017},
   publisher={Wiley Online Library}
 }
+
+@article{NyhRei10,
+  title={When corrections fail: The persistence of political misperceptions},
+  author={Nyhan, Brendan and Reifler, Jason},
+  journal={Political Behavior},
+  volume={32},
+  number={2},
+  pages={303--330},
+  year={2010},
+  publisher={Springer}
+}
