--- a/gk.bib
+++ b/gk.bib
@@ -26479,3 +26479,14 @@ Year = {1998},
   year={2010},
   publisher={Springer}
 }
+
+@article{MetFlaMed10,
+  title={Social and heuristic approaches to credibility evaluation online},
+  author={Metzger, Miriam J and Flanagin, Andrew J and Medders, Ryan B},
+  journal={Journal of communication},
+  volume={60},
+  number={3},
+  pages={413--439},
+  year={2010},
+  publisher={Wiley Online Library}
+}
