more fake news articles

--- a/gk.bib
+++ b/gk.bib
@@ -26490,3 +26490,87 @@ Year = {1998},
   year={2010},
   publisher={Wiley Online Library}
 }
+
+@misc{Hanlon18,
+  title={It’s Not Just Facebook: Countering Russia’s Social Media Offensive},
+  author={Hanlon, Bradley},
+  year={2018},
+  url = {https://disinfoportal.org/its-not-just-facebook-countering-russias-social-media-offensive/}
+}
+
+@misc{Hwang17,
+  title={Digital Disinformation — A Primer},
+  author={Hwang, Tim},
+  year={2017},
+  url = {http://www.atlanticcouncil.org/publications/articles/digital-disinformation-a-primer}
+}
+
+@article{DomLimMou13,
+  title={The anatomy of a scientific rumor},
+  author={De Domenico, Manlio and Lima, Antonio and Mougel, Paul and Musolesi, Mirco},
+  journal={Scientific reports},
+  volume={3},
+  pages={2980},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
+
+@article{CiaShiRoc15,
+  title={Computational fact checking from knowledge networks},
+  author={Ciampaglia, Giovanni Luca and Shiralkar, Prashant and Rocha, Luis M and Bollen, Johan and Menczer, Filippo and Flammini, Alessandro},
+  journal={PloS one},
+  volume={10},
+  number={6},
+  pages={e0128193},
+  year={2015},
+  publisher={Public Library of Science}
+}
+
+@inproceedings{FriAdaEck14,
+  title={Rumor Cascades.},
+  author={Friggeri, Adrien and Adamic, Lada A and Eckles, Dean and Cheng, Justin},
+  booktitle={Eighth International AAAI Conference on Weblogs and Social Media},
+  year={2014}
+}
+
+@article{GoeAndHof16,
+  title={The structural virality of online diffusion},
+  author={Goel, Sharad and Anderson, Ashton and Hofman, Jake and Watts, Duncan J},
+  journal={Management Science},
+  volume={62},
+  number={1},
+  pages={180--196},
+  year={2015},
+  publisher={INFORMS}
+}
+
+@article{IttBal09,
+  title={Bayesian surprise attracts human attention},
+  author={Itti, Laurent and Baldi, Pierre},
+  journal={Vision research},
+  volume={49},
+  number={10},
+  pages={1295--1306},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{BerMil12,
+  title={What makes online content viral?},
+  author={Berger, Jonah and Milkman, Katherine L},
+  journal={Journal of marketing research},
+  volume={49},
+  number={2},
+  pages={192--205},
+  year={2012},
+  publisher={American Marketing Association}
+}
+
+@article{RooLin18,
+  title={The fake news game: actively inoculating against the risk of misinformation},
+  author={Roozenbeek, Jon and van der Linden, Sander},
+  journal={Journal of Risk Research},
+  pages={1--11},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
