--- a/gk.bib
+++ b/gk.bib
@@ -25981,3 +25981,10 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {540--554},
   year =         {1973}
 }
+@article{SteMcG2015,
+  title =        {Partisan gerrymandering and the efficiency gap},
+  author =       {Stephanopoulos, Nicholas O and McGhee, Eric M},
+  journal =      {The University of Chicago Law Review},
+  pages =        {831--900},
+  year =         {2015}
+}
