--- a/gk.bib
+++ b/gk.bib
@@ -26574,3 +26574,21 @@ Year = {1998},
   year={2018},
   publisher={Taylor \& Francis}
 }
+
+@article{BakMcS18,
+  title={Fake news and the economy of emotions: Problems, causes, solutions},
+  author={Bakir, Vian and McStay, Andrew},
+  journal={Digital Journalism},
+  volume={6},
+  number={2},
+  pages={154--175},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
+
+@misc{NewFleKal18,
+  title={Reuters Institute Digital News Report 2018},
+  author={Newman, Nic and Fletcher, Richard and Kalogeropoulos, Antonis and Levy, David A. L. and Nielsen, Rasmus Kleis},
+  year={2018},
+  url = {https://reutersinstitute.politics.ox.ac.uk/sites/default/files/digital-news-report-2018.pdf}
+}
