--- a/gk.bib
+++ b/gk.bib
@@ -25988,3 +25988,13 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {831--900},
   year =         {2015}
 }
+@article{McGhee2014,
+  title =        {Measuring Partisan Bias in Single-Member District
+                  Electoral Systems},
+  author =       {McGhee, Eric},
+  journal =      {Legislative Studies Quarterly},
+  volume =       {39},
+  number =       {1},
+  pages =        {55--85},
+  year =         {2014}
+}
