--- a/gk.bib
+++ b/gk.bib
@@ -25981,14 +25981,14 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {540--554},
   year =         {1973}
 }
-@article{SteMcG2015,
+@article{SteMcG15,
   title =        {Partisan gerrymandering and the efficiency gap},
   author =       {Stephanopoulos, Nicholas O and McGhee, Eric M},
   journal =      {The University of Chicago Law Review},
   pages =        {831--900},
   year =         {2015}
 }
-@article{McGhee2014,
+@article{McGhee14,
   title =        {Measuring Partisan Bias in Single-Member District
                   Electoral Systems},
   author =       {McGhee, Eric},
@@ -25997,4 +25997,13 @@ Theory Group (Formerly: E1071), TU Wien},
   number =       {1},
   pages =        {55--85},
   year =         {2014}
+}
+@article{McGhee17,
+  title =        {Measuring efficiency in redistricting},
+  author =       {McGhee, Eric},
+  journal =      {Election Law Journal: Rules, Politics, and Policy},
+  volume =       {16},
+  number =       {4},
+  pages =        {417--442},
+  year =         {2017}
 }
