--- a/gk.bib
+++ b/gk.bib
@@ -25983,7 +25983,7 @@ Theory Group (Formerly: E1071), TU Wien},
 }
 @article{SteMcG15,
   title =        {Partisan gerrymandering and the efficiency gap},
-  author =       {Stephanopoulos, Nicholas O and McGhee, Eric M},
+  author =       {Stephanopoulos, Nicholas O and McGhee, Eric},
   journal =      {The University of Chicago Law Review},
   pages =        {831--900},
   year =         {2015}
