--- a/gk.bib
+++ b/gk.bib
@@ -26592,3 +26592,13 @@ Year = {1998},
   year={2018},
   url = {https://reutersinstitute.politics.ox.ac.uk/sites/default/files/digital-news-report-2018.pdf}
 }
+
+@incollection{GenShaSto15,
+  title={Media bias in the marketplace: Theory},
+  author={Gentzkow, Matthew and Shapiro, Jesse M and Stone, Daniel F},
+  booktitle={Handbook of media economics},
+  volume={1},
+  pages={623--645},
+  year={2015},
+  publisher={Elsevier}
+}
