--- a/gk.bib
+++ b/gk.bib
@@ -26602,3 +26602,13 @@ Year = {1998},
   year={2015},
   publisher={Elsevier}
 }
+
+@incollection{PugSny15,
+  title={Empirical studies of media bias},
+  author={Puglisi, Riccardo and Snyder Jr, James M},
+  booktitle={Handbook of media economics},
+  volume={1},
+  pages={647--667},
+  year={2015},
+  publisher={Elsevier}
+}
