--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2573,3 +2573,13 @@ pages={1037--1060},
   author =       {Gilbert, Daniel and Gary King and Stephen Pettigrew
                   and Timothy Wilson}
 }
+
+@data{KinNie18,
+  author =       {King, Gary and Nielsen, Richard},
+  publisher =    {Harvard Dataverse},
+  title =        {Replication Data for: Why Propensity Scores Should
+                  Not Be Used for Matching},
+  year =         {2018},
+  doi =          {10.7910/DVN/C0DBAE},
+  url =          {https://doi.org/10.7910/DVN/C0DBAE}
+}
