More cites for the readme2 paper

--- a/gk.bib
+++ b/gk.bib
@@ -26007,3 +26007,63 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {417--442},
   year =         {2017}
 }
+@article{IofSze15,
+  title =        {Batch normalization: Accelerating deep network training by reducing internal covariate shift},
+  author =       {Sergey Ioffe and Christian Szegedy},
+  journal =      {Proceedings of the 32nd International Conference on Machine Learning},
+  volume =       {37},
+  pages =        {448--456},
+  year =         {2015}
+}
+@article{Zhang04,
+  title=		{Solving large scale linear prediction problems using stochastic gradient descent algorithms},
+  author=		{Zhang, Tong},
+  journal=		{Proceedings of the twenty-first international conference on Machine learning},
+  pages=		{116},
+  year=		{2004}
+}
+@article{Sparck72,
+  title={A statistical interpretation of term specificity and its application in retrieval},
+  author={{Sparck Jones}, Karen},
+  journal={Journal of documentation},
+  volume={28},
+  number={1},
+  pages={11--21},
+  year={1972}
+}
+
+@article{RumHinWil86,
+  title={Learning representations by back-propagating errors},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  journal={Nature},
+  volume={323},
+  number={6088},
+  pages={533},
+  year={1986},
+}
+
+@inproceedings{MikYihZwe13,
+  title={Linguistic regularities in continuous space word representations},
+  author={Mikolov, Tomas and Yih, Wen-tau and Zweig, Geoffrey},
+  booktitle={Proceedings of the 2013 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  pages={746--751},
+  year={2013}
+}
+
+@article{ZhaBenHar16,
+  title={Understanding deep learning requires rethinking generalization},
+  author={Zhang, Chiyuan and Bengio, Samy and Hardt, Moritz and Recht, Benjamin and Vinyals, Oriol},
+  journal={arXiv preprint arXiv:1611.03530},
+  year={2016}
+}
+
+@article{SriHinKri14,
+  title={Dropout: a simple way to prevent neural networks from overfitting},
+  author={Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+  journal={The Journal of Machine Learning Research},
+  volume={15},
+  number={1},
+  pages={1929--1958},
+  year={2014},
+  publisher={JMLR. org}
+}
