--- a/gk.bib
+++ b/gk.bib
@@ -26082,3 +26082,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2014},
   publisher =    {JMLR. org}
 }
+@book{LeiNag13,
+  title =        {Who votes now?: Demographics, issues, inequality,
+                  and turnout in the United States},
+  author =       {Leighley, Jan E and Nagler, Jonathan},
+  year =         {2013},
+  publisher =    {Princeton University Press}
+}
