--- a/gk.bib
+++ b/gk.bib
@@ -26732,3 +26732,13 @@ Year = {1998},
   publisher={Elsevier}
 }
 
+@article{BauGro09,
+  title={Shot by the messenger: Partisan cues and public opinion regarding national security and war},
+  author={Baum, Matthew A and Groeling, Tim},
+  journal={Political Behavior},
+  volume={31},
+  number={2},
+  pages={157--186},
+  year={2009},
+  publisher={Springer}
+}
