--- a/gk.bib
+++ b/gk.bib
@@ -20157,7 +20157,7 @@ journal = {Science}
   journal =	 {Computational Statistics \& Data Analysis},
   year =	 {2011},
   volume =	 55,
-  pages =	 {1942ै1960}
+  pages =	 {1942-1960}
 }
 @Unpublished{HonPlu11,
   author =	 {Honaker, James and Eric Plutzer},
@@ -26484,7 +26484,7 @@ Theory Group (Formerly: E1071), TU Wien},
 
 @misc{Silverman16,
   title =        {This Analysis Shows How Viral Fake Election News
-                  StoriesOutperformed Real News On Facebook},
+                  Stories Outperformed Real News On Facebook},
   author =       {Silverman, Craig},
   year =         {2016},
   url =
