--- a/gk.bib
+++ b/gk.bib
@@ -1599,7 +1599,7 @@ howpublished = {NBER}
 }
 
 @book{BoxHunHun78,
-	author={George E.P. Box and William G. Hunger and J. Stuart Hunter},
+	author={George E.P. Box and William G. Hunter and J. Stuart Hunter},
 	title={Statistics for Experimenters},
 	publisher={Wiley-Interscience},
 	year={1978},
