--- a/gk.bib
+++ b/gk.bib
@@ -26850,3 +26850,18 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2009},
   publisher =    {Springer}
 }
+@article{CoxKat99,
+  title =        {The reapportionment revolution and bias in US
+                  congressional elections},
+  author =       {Cox, Gary W and Katz, Jonathan N},
+  journal =      {American Journal of Political Science},
+  pages =        {812--841},
+  year =         {1999}
+}
+@book{CoxKat02,
+  title =        {Elbridge Gerry's salamander: The electoral
+                  consequences of the reapportionment revolution},
+  author =       {Cox, Gary W and Katz, Jonathan N},
+  year =         {2002},
+  publisher =    {Cambridge University Press}
+}
