--- a/gk.bib
+++ b/gk.bib
@@ -26853,7 +26853,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @article{CoxKat99,
   title =        {The reapportionment revolution and bias in US
                   congressional elections},
-  author =       {Cox, Gary W and Katz, Jonathan N},
+  author =       {Cox, Gary W. and Katz, Jonathan N.},
   journal =      {American Journal of Political Science},
   pages =        {812--841},
   year =         {1999}
@@ -26861,7 +26861,26 @@ Theory Group (Formerly: E1071), TU Wien},
 @book{CoxKat02,
   title =        {Elbridge Gerry's salamander: The electoral
                   consequences of the reapportionment revolution},
-  author =       {Cox, Gary W and Katz, Jonathan N},
+  author =       {Cox, Gary W. and Katz, Jonathan N.},
   year =         {2002},
   publisher =    {Cambridge University Press}
+}
+@article{McDBes15,
+  title =        {Unfair partisan gerrymanders in politics and law: A
+                  diagnostic applied to six cases},
+  author =       {McDonald, Michael D and Best, Robin E},
+  journal =      {Election Law Journal},
+  volume =       {14},
+  number =       {4},
+  pages =        {312--330},
+  year =         {2015}
+}
+@article{ChaMilSob17,
+  title =        {Flaws in the efficiency gap},
+  author =       {Chambers, Christopher P and Miller, Alan D and
+                  Sobel, Joel},
+  journal =      {Journal of Law \& Politics},
+  volume =       {33},
+  pages =        {1},
+  year =         {2017}
 }
