--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -781,7 +781,7 @@ pages={1037--1060},
 }
 
 @inbook{GelKatKin04,
-  author =	 {Andrew Gelman and Jonathan Katz and Gary King},
+  author =	 {Andrew Gelman and Jonathan N. Katz and Gary King},
   title =	 {Rethinking the Vote: The Politics and Prospects of
                   American Electoreal Reform},
   chapter =	 {Chapter 5, Empirically Evaluating the Electoral
@@ -1312,7 +1312,7 @@ pages={1037--1060},
 }
 
 @article{KatKin99,
-  author =       {Jonathan Katz and Gary King},
+  author =       {Jonathan N. Katz and Gary King},
   title =        {A Statistical Model for Multiparty Electoral Data},
   journal =      {American Political Science Review},
   volume =       93,
@@ -2238,7 +2238,7 @@ pages={1037--1060},
 }
 
 @article{KatKin99b,
-  author =	 {Jonathan Katz and Gary King},
+  author =	 {Jonathan N. Katz and Gary King},
   title =	 {Replication data for: A Statistical Model of
                   Multiparty Electoral Data},
   year =	 {1999},
@@ -2586,7 +2586,7 @@ pages={1037--1060},
 @book{CoxKat02,
   title =        {Elbridge Gerry's salamander: The electoral
                   consequences of the reapportionment revolution},
-  author =       {Cox, Gary W and Katz, Jonathan N},
+  author =       {Cox, Gary W and Katz, Jonathan N.},
   year =         {2002},
   publisher =    {Cambridge University Press}
 }
