--- a/gk.bib
+++ b/gk.bib
@@ -26884,3 +26884,25 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {1},
   year =         {2017}
 }
+@article{McGSmiAnt15,
+  title =        {A discernable and manageable standard for partisan
+                  gerrymandering},
+  author =       {McGann, Anthony J and Smith, Charles Anthony and
+                  Latner, Michael and Keena, J Alex},
+  journal =      {Election Law Journal},
+  volume =       {14},
+  number =       {4},
+  pages =        {295--311},
+  year =         {2015},
+  publisher =    {Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd
+                  Floor New Rochelle, NY 10801 USA}
+}
+@article{KraMagMcD18,
+  title =        {Can Gerrymanders Be Detected? An Examination of
+                  Wisconsin’s State Assembly},
+  author =       {Krasno, Jonathan and Magleby, Daniel B and McDonald,
+                  Michael D and Donahue, Shawn and Best, Robin E},
+  journal =      {American Politics Research},
+  pages =        {1532673X18767890},
+  year =         {2018}
+}
