--- a/gk.bib
+++ b/gk.bib
@@ -26903,6 +26903,6 @@ Theory Group (Formerly: E1071), TU Wien},
   author =       {Krasno, Jonathan and Magleby, Daniel B and McDonald,
                   Michael D and Donahue, Shawn and Best, Robin E},
   journal =      {American Politics Research},
-  pages =        {1532673X18767890},
+  pages =        {1--40},
   year =         {2018}
 }
