--- a/gk.bib
+++ b/gk.bib
@@ -26906,3 +26906,36 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {1--40},
   year =         {2018}
 }
+@article{OweGro88,
+  title =        {Optimal partisan gerrymandering},
+  author =       {Owen, Guillermo and Grofman, Bernard},
+  journal =      {Political Geography Quarterly},
+  volume =       {7},
+  number =       {1},
+  pages =        {5--22},
+  year =         {1988}
+}
+@article{Hardy77,
+  title =        {Considering the gerrymander},
+  author =       {Hardy, Leroy C},
+  journal =      {Pepperdine Law Review},
+  volume =       {4},
+  number =       {2},
+  pages =        {3},
+  year =         {1977}
+}
+@article{Tapp18,
+  title =        {Measuring Political Gerrymandering},
+  author =       {Tapp, Kristopher},
+  journal =      {arXiv preprint arXiv:1801.02541},
+  year =         {2018}
+}
+@article{Cover18,
+  title =        {Quantifying Partisan Gerrymandering: An Evaluation
+                  of the Efficiency Gap Proposal},
+  author =       {Plener Cover, Benjamin},
+  journal =      {Stan. L. Rev.},
+  volume =       {70},
+  pages =        {1131},
+  year =         {2018}
+}
