--- a/gk.bib
+++ b/gk.bib
@@ -26939,3 +26939,12 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {1131},
   year =         {2018}
 }
+@article{May52,
+  title =        {A set of independent necessary and sufficient
+                  conditions for simple majority decision},
+  author =       {May, Kenneth O},
+  journal =      {Econometrica: Journal of the Econometric Society},
+  pages =        {680--684},
+  year =         {1952},
+  publisher =    {JSTOR}
+}
