--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -126,11 +126,11 @@
   title =        {A Theory of Statistical Inference for Matching
                   Methods in Causal Research},
   journal =      {Political Analysis},
-  year =         {In Press},
+  year =         {2018},
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
-  OPTpages =     {},
+  OPTpages =     {1--23},
   OPTmonth =     {},
   note =         {http://j.mp/Nt9TkZ},
   OPTannote =    {}
