--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -130,7 +130,7 @@
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
-  OPTpages =     {1--23},
+  pages =     {1--23},
   OPTmonth =     {},
   note =         {http://j.mp/Nt9TkZ},
   OPTannote =    {}
