--- a/gk.bib
+++ b/gk.bib
@@ -26927,7 +26927,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @article{Tapp18,
   title =        {Measuring Political Gerrymandering},
   author =       {Tapp, Kristopher},
-  journal =      {preprint arXiv:1801.02541},
+  journal =      {arXiv:1801.02541},
   year =         {2018}
 }
 @article{Cover18,
