--- a/gk.bib
+++ b/gk.bib
@@ -26948,3 +26948,27 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1952},
   publisher =    {JSTOR}
 }
+@article{AnsLeb08,
+  title =        {A spatial model of the relationship between seats
+                  and votes},
+  author =       {Ansolabehere, Stephen and Leblanc, William},
+  journal =      {Mathematical and Computer Modelling},
+  volume =       {48},
+  number =       {9-10},
+  pages =        {1409--1420},
+  year =         {2008},
+  publisher =    {Elsevier}
+}
+@article{AnsLebSny12,
+  title =        {When parties are not teams: party positions in
+                  single-member district and proportional
+                  representation systems},
+  author =       {Ansolabehere, Stephen and Leblanc, William and
+                  Snyder, James M},
+  journal =      {Economic Theory},
+  volume =       {49},
+  number =       {3},
+  pages =        {521--547},
+  year =         {2012},
+  publisher =    {Springer}
+}
