--- a/gk.bib
+++ b/gk.bib
@@ -26972,3 +26972,22 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2012},
   publisher =    {Springer}
 }
+@article{Brookes59,
+  title =        {Legislative Representation and Party Vote in New
+                  Zealand: Reflections on the March Analysis},
+  author =       {Brookes, Ralph H},
+  journal =      {Public Opinion Quarterly},
+  pages =        {288--291},
+  year =         {1959},
+  publisher =    {JSTOR}
+}
+@article{BorJohThr10,
+  title={A method for measuring and decomposing electoral bias for the three-party case, illustrated by the British case},
+  author={Borisyuk, Galina and Johnston, Ron and Thrasher, Michael and Rallings, Colin},
+  journal={Electoral Studies},
+  volume={29},
+  number={4},
+  pages={733--745},
+  year={2010},
+  publisher={Elsevier}
+}
